# qwen-scope-lab

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK.md  app.py  modal_app.py  pyproject.toml  serve_web.py
archive/: README.md  latent_map_engine.py  research_probes.py
configs/: fake_test.yaml  qwen35_27b_l0_100.yaml  qwen35_27b_l0_50.yaml  qwen35_2b_base_l0_100.yaml  qwen35_2b_dev_l0_100.yaml
docs/: AGENT_RESEARCH.md  MANIFOLD.md  MIXTURE_DIAL_DISTILL.md  MLX.md  USER_GUIDE.md  index.html
qwen_scope_lab/: baselines.py  benchmark_controls.py  concept_presets.py  config.py  distill_web.py  env.py  experiment_log.py  mlx_backend.py  model_loader.py  monitor.py  prompt_sets.py  service.py  web_api.py
qwen_scope_lab_bench/: __init__.py  feature_compare.py  hooks.py  mlx_backend.py  monitor_schema.py  probe_store.py  recipe_store.py  sae_loader.py  steering.py  web_api.py
qwen_scope_steering_gui/: activations.py  autopilot.py  behavior_sets.py  benchmark.py  benchmark_metrics.py  candidate_search.py  concept_presets.py  control_loop.py  dev_backend.py  emotion_sets.py  feature_labels.py  feature_selection.py  generation.py  hooks.py  judge.py  mlx_backend.py  monitor.py  monitor_store.py  notebook.py  probe_schema.py  probes.py  recipe_schema.py  sae_math.py  safety.py  safety_metrics.py  schemas.py  service.py  sweep.py  web_api.py
scripts/: _c05_full_table.py  _c05_mlx_audit.py  _c09_distill_gate.py  _c09_distill_generate.py  _c09_distill_train.py  _c09_layer_sweep.py  _c09_mlx_eval.py  _c09_mlx_generate.py  _card_seam.py  _census_recovery.py  _census_routing.py  _concise_mlx_base_vs_instruct.py  _cyclic_atlas.py  _cyclic_manifold.py  _emotion_geometry_dump.py  _emotion_manifold.py  _jailbreak_scores_dump.py  _judge_openrouter.py  _manifold_census.py  _manifold_zoo.py  _modal_runner.py  _run_27b_showdown_modal.py  _run_mixture_pilot_judge.py  _tinker_teacher.py  addressee_build_corpus.py  addressee_eval.py  agent_boundary_build_corpus.py  agent_boundary_eval.py  autopilot_recipe.py  bench_recipe.py  compare_prompts.py  create_recipe.py  export_recipe_markdown.py  inspect_features.py  jailbreak_wild_build_corpus.py  jailbreak_wild_eval.py  manifold_to_data_distill.py  mixture_dial_distill.py  mixture_dial_judge.py  mixture_dial_make_eval.py  (+20 more)
tests/: test_app_tables.py  test_app_tabs.py  test_autopilot_candidate_ranking.py  test_baselines.py  test_behavior_readout.py  test_behavior_sets.py  test_bench_no_secret_logging.py  test_benchmark_controls.py  test_benchmark_integration.py  test_benchmark_metrics.py  (+39 more)
(+378 files in other folders)
