[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-scope-lab-bench"
version = "0.1.0"
description = "Interactive Qwen Scope SAE activation inspection and residual-stream feature steering."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Stephen Casella" }]
requires-python = ">=3.10"
dependencies = [
  "accelerate",
  "gradio",
  "huggingface-hub",
  "modal",
  "pandas",
  "python-dotenv",
  "pyyaml",
  "safetensors",
  "torch",
  "transformers",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/scasella/qwen-scope-steering"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen_scope_lab_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
